logging/ingresses/es-ingress-nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"es-ingress-nginx","namespace":"logging"},"spec":{"rules":[{"host":"es.logging.pulse.com","http":{"paths":[{"backend":{"serviceName":"elasticsearch","servicePort":"http"},"path":"/"}]}}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  generation: 1
  name: es-ingress-nginx
  selfLink: /apis/extensions/v1beta1/namespaces/logging/ingresses/es-ingress-nginx
spec:
  rules:
  - host: es.logging.pulse.com
    http:
      paths:
      - backend:
          serviceName: elasticsearch
          servicePort: http
        path: /
status:
  loadBalancer: {}
