logging/ingresses/kibana-ingress-nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"kibana-ingress-nginx","namespace":"logging"},"spec":{"rules":[{"host":"lga-kube-kibana","http":{"paths":[{"backend":{"serviceName":"kibana","servicePort":"ui"},"path":"/"}]}},{"host":"lga-kube-kibana.pulsepoint.com","http":{"paths":[{"backend":{"serviceName":"kibana","servicePort":"ui"},"path":"/"}]}}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  generation: 1
  name: kibana-ingress-nginx
  selfLink: /apis/extensions/v1beta1/namespaces/logging/ingresses/kibana-ingress-nginx
spec:
  rules:
  - host: lga-kube-kibana
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: ui
        path: /
  - host: lga-kube-kibana.pulsepoint.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: ui
        path: /
status:
  loadBalancer: {}
